--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,28 @@
     ],
     "require": {
         "composer/installers": "^2.0",
+        "drupal/admin_theme": "^1.0",
+        "drupal/admin_toolbar": "^3.4",
+        "drupal/autocomplete_deluxe": "^2.0",
+        "drupal/better_exposed_filters": "^6.0",
+        "drupal/chosen": "^4.0",
         "drupal/core-composer-scaffold": "^10.2",
         "drupal/core-project-message": "^10.2",
         "drupal/core-recommended": "^10.2",
-        "drupal/core-vendor-hardening": "^10.2"
+        "drupal/core-vendor-hardening": "^10.2",
+        "drupal/ctools": "^4.0",
+        "drupal/custom_breadcrumbs": "^1.1",
+        "drupal/draggableviews": "^2.1",
+        "drupal/imce": "^3.0",
+        "drupal/libraries": "^4.0",
+        "drupal/menu_block": "^1.10",
+        "drupal/metatag": "^2.0",
+        "drupal/pathauto": "^1.12",
+        "drupal/subpathauto": "^1.3",
+        "drupal/taxonomy_menu": "^3.6",
+        "drupal/views_bulk_operations": "^4.2",
+        "drupal/xls_views_data_export": "^3.0",
+        "drupal/xmlsitemap": "^1.5"
     },
     "conflict": {
         "drupal/drupal": "*"
