--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "drupal/admin_toolbar": "^3.4",
         "drupal/autocomplete_deluxe": "^2.0",
         "drupal/better_exposed_filters": "^6.0",
+        "drupal/bootstrap5": "^3.0",
         "drupal/chosen": "^4.0",
         "drupal/core-composer-scaffold": "^10.2",
         "drupal/core-project-message": "^10.2",
