--- a/modules/airc_module/hello_module/hello_module.routing.yml
+++ b/modules/airc_module/hello_module/hello_module.routing.yml
@@ -5,3 +5,11 @@ hello_module.wellcome:
     _title: 'Trang chủ'
   requirements:
     _permission: 'access content'
+
+hello_module.detail:
+  path: '/detail'
+  defaults:
+    _controller: '\Drupal\hello_module\Controller\WellcomeController::detail'
+    _title: 'Chi tiết'
+  requirements:
+    _permission: 'access content'
