--- a/themes/custom/custom_theme/custom_theme.libraries.yml
+++ b/themes/custom/custom_theme/custom_theme.libraries.yml
@@ -4,6 +4,7 @@ global-styling:
     theme:
       css/globals.css: {}
       css/style.css: {}
+      css/detail.css: {}
       css/styleguide.css.css: {}
   js:
     js/script.js: {}
