--- a/themes/airc/airc.libraries.yml
+++ b/themes/airc/airc.libraries.yml
@@ -4,6 +4,7 @@ global-styling:
     theme:
       css/globals.css: {}
       css/style.css: {}
+      css/product.css: {}
   js:
     js/script.js: {}
   dependencies:
