--- a/themes/airc/airc.libraries.yml
+++ b/themes/airc/airc.libraries.yml
@@ -6,7 +6,7 @@ global-styling:
       css/style.css: {}
       css/product.css: {}
       css/out-esearch.css: {}
-      css/out-product.css: {}
+      css/collaboration.css: {}
   js:
     js/script.js: {}
   dependencies:
