--- a/modules/airc_module/airc_module.info.yml
+++ b/modules/airc_module/airc_module.info.yml
@@ -1,4 +1,5 @@
 name: Airc module
 type: module
-description: "Airc module"
-core_version_requirement: ^9 || ^10
+description: "Airc module for Drupal 10"
+core_version_requirement: ^8 || ^9 || ^10
+package: AIRC
