--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
 /.idea
 /.vscode
-core/**/*
-vendor/**/*
-sites/**/files/**/*
-libraries/**/*
-sites/**/libraries/**/*
-profiles/**/libraries/**/*
-**/js_test_files/**/*
+vendor/
+sites/*/settings*.php
+sites/*/services*.yml
+sites/*/files
+sites/*/private
+sites/simpletest
 **/node_modules/**/*
 modules/contrib
 themes/contrib
+*/files
+*/private
